--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.pru.MainActivity">
 
-    <com.pru.MyOTPView
+    <com.pru.otplibrary.MyOTPView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:digit_size="5"
