Attributes_change_29_MAY
attributes names are changed.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,9 @@
     <com.pru.otplibrary.MyOTPView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:digit_size="5"
-        app:digit_default_text="*"
-        android:textSize="14sp"
-        app:digit_color="@color/colorAccent"
+        app:digits_count="5"
+        app:digits_default_text="*"
+        app:digits_textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
