--- a/otplibrary/src/main/res/layout/digit_view.xml
+++ b/otplibrary/src/main/res/layout/digit_view.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_margin="@dimen/margin_5"
-        android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/background"
+    android:layout_margin="@dimen/margin_5"
+    android:padding="@dimen/margin_5">
 
     <EditText
-            android:id="@+id/edit_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:cursorVisible="false"
-            android:fontFamily="@font/bold_text"
-            android:gravity="center"
-            android:hint="0"
-            android:inputType="number"
-            android:maxLength="1"
-            android:maxLines="1"
-            android:textAlignment="center" />
+        android:id="@+id/edit_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:cursorVisible="false"
+        android:fontFamily="@font/bold_text"
+        android:gravity="center"
+        android:hint="0"
+        android:inputType="number"
+        android:maxLength="1"
+        android:maxLines="1"
+        android:textAlignment="center" />
 </RelativeLayout>
