--- a/otplibrary/src/main/res/values/attrs.xml
+++ b/otplibrary/src/main/res/values/attrs.xml
@@ -5,5 +5,6 @@
         <attr name="digits_color" format="color" />
         <attr name="digits_default_text" format="string" />
         <attr name="digits_textSize" format="dimension"/>
+        <attr name="digits_default_text_color" format="color"/>
     </declare-styleable>
 </resources>
