--- a/otplibrary/src/main/res/values/colors.xml
+++ b/otplibrary/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="black">#000000</color>
+    <color name="tint">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
+    <color name="bg">#F6F5FA</color>
 </resources>
